@@ -1,26 +1,18 @@
 package com.faforever.client.preferences;
 
+import lombok.Getter;
+import lombok.RequiredArgsConstructor;
+
 import java.util.Locale;
 
+@Getter
+@RequiredArgsConstructor
 public enum DateInfo {
   AUTO("settings.date.system", null),
-  DAY_MONTH_YEAR("settings.date.dmy", new Locale("fr", "FR")),
-  MONTH_DAY_YEAR("settings.date.mdy", new Locale("en", "US"));
+  DAY_MONTH_YEAR("settings.date.dmy", Locale.of("fr", "FR")),
+  MONTH_DAY_YEAR("settings.date.mdy", Locale.of("en", "US"));
 
-  private final Locale usedLocale;
   private final String displayNameKey;
-
-  DateInfo(String displayNameKey, Locale usedLocale) {
-    this.displayNameKey = displayNameKey;
-    this.usedLocale = usedLocale;
-  }
-
-  public Locale getUsedLocale() {
-    return usedLocale;
-  }
-
-  public String getDisplayNameKey() {
-    return displayNameKey;
-  }
+  private final Locale usedLocale;
 }
 
